--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="col-md">
             <p class="header1">BORAЖ</p>
-            <p class="header3">Aaliyan Ahmad</p>
+            <p class="header3"><b>Aaliyan Ahmad</b></p>
             <p class="header2">Computer Science Enthusiast</p>
             <!-- <a 
               class="link1"
