--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
           "BoraЖ",
           "BORAЖ"
         ],
-        "image": "img/avatar.png",
+        "image": "image/avatar.png",
         "jobTitle": ["Computer Science Student"],
         "description": "BlaBla BlaBla",
-        "url": "https://aaliyanahmad.me",
+        "url": "https://aaliyanahmad.github.io",
         "sameAs": [
           "https://facebook.com/aaliyanahmad",
           "https://instagram.com/aaliyanahmad",
-          "https://twitch.tv/aaliyanahmad",
           "https://linkedin.com/in/a4liyan",
           "https://github.com/aaliyanahmad",
-          "https://tiktok.com/@aaliyanahmad"
         ],
         "birthDate": "2004-04-12"
       }
