--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         "url": "https://aaliyanahmad.github.io",
         "sameAs": [
           "https://facebook.com/aaliyanahmad",
-          "https://instagram.com/aaliyanahmad",
+          "https://instagram.com/aaliyanahm4d",
           "https://linkedin.com/in/a4liyan",
           "https://github.com/aaliyanahmad",
         ],
@@ -84,7 +84,7 @@
 
             <a
               class="link1"
-              href="https://instagram.com/aaliyanahmad"
+              href="https://instagram.com/aaliyanahm4d"
               data-toggle="tooltip"
               data-placement="bottom"
               title="Instagram"
