--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>BORAЖ</title>
+    <title>A4LIYAN</title>
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -70,8 +70,8 @@
             <img class="image img-fluid" src="image/avatar.png" alt="img" />
           </div>
           <div class="col-md">
-            <p class="header1">BORAЖ</p>
-            <p class="header3"><b>Aaliyan Ahmad</b></p>
+            <p class="header1">Aaliyan Ahmad</p>
+            <p class="header2"><b>Epee Fencer</b></p>
             <p class="header2">Computer Science Enthusiast</p>
             <!-- <a 
               class="link1"
