--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
           </div>
           <div class="col-md">
             <p class="header1">Aaliyan Ahmad</p>
-            <p class="header2"><b>Epee Fencer</b></p>
-            <p class="header2">Computer Science Enthusiast</p>
+            <p class="header2"><b>CS Enthusiast -- Epee Fencer</b></p>
             <!-- <a 
               class="link1"
               href="https://facebook.com/aaliyanahmad"
